[package]
name = "xpir"
version = "0.1.0"
authors = ["Sebastian Angel <sebs@cs.utexas.edu>"]
license = "CC0-1.0"
description = "Rust bindings for XPIR"
repository = "https://github.com/sga001/pir.git"

[build-dependencies]
cmake = "0.1.31"
gcc = "0.3.54"

[dependencies]
serde = "1.0.70" 
serde_derive = "1.0.70"
serde_bytes = "0.10.4"
libc = "0.2.42"

[dev-dependencies]
criterion = "0.2.4"
rand = "0.5.4"

[[bench]]
name = "pir"
harness = false
